# CPT323_a2

./: README.md  abstract.cpp  all.cpp  class.cpp  fed.cpp  iterator.cpp  namespace.cpp  operator.cpp  pointer.cpp  vector.cpp
a1_solution/: reader.h
final/: CMakeLists.txt  datastructure.h  listsorter.h  main.cpp  main.h  reader.cpp  reader.h
halfway/: CMakeLists.txt  list.cpp  list.h  main.cpp  main.h  tree.cpp  tree.h
halfway2/: datastructure.h  list.cpp  list.h  main.cpp
listsort/: CMakeLists.txt  list.cpp  list.h  main.cpp  main.h  reader.cpp  reader.h  saver.cpp  saver.h
test/: datastructure.h  listsorter.cpp  listsorter.h  main.cpp  main.h
